--- a/index.html
+++ b/index.html
@@ -1069,6 +1069,8 @@
                 enemies: [],
                 drones: [],
                 selfies: [],
+                sunglasses: [],
+                sunglassesSpawnTimer: 0,
                 allyShips: [],
                 selfieCount: 0,
                 lives: 3,
