--- a/index.html
+++ b/index.html
@@ -1069,10 +1069,10 @@
                 enemies: [],
                 drones: [],
                 selfies: [],
-                sunglasses: [],
-                sunglassesSpawnTimer: 0,
                 allyShips: [],
+                sunglasses: [],
                 selfieCount: 0,
+                gameTime: 0,  // Tiempo total de juego en segundos
                 lives: 3,
                 immune: false,
                 immuneTimer: 0,
@@ -1080,6 +1080,7 @@
                 score: 0,
                 enemySpawnTimer: 0,
                 selfieSpawnTimer: 0,
+                sunglassesSpawnTimer: 0,
                 difficulty: 1,
                 enemiesAvoided: 0
             };
